--- a/project/example/src/index.html
+++ b/project/example/src/index.html
@@ -12,16 +12,16 @@
 
 <body>
    
-    <section class="hero">
-        <div class="hero__container">tesr</div>
-        <img src="@@webRoot/img/hero-bg.jpg" alt="img">
-        <a href="./pages/blog.html">rfre</a>
-    </section>
-    <section>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus, soluta maxime debitis voluptas nostrum enim cum iste impedit aut labore harum nemo perspiciatis reiciendis excepturi? Itaque voluptatem consequuntur sit?
-            </p>
-    </section>
+   <div class="wrapper">
+    <header class="header">
+        <div class="contaienr header__container">
+            <img class="logo" src="" alt="">
+            <nav class="header__nav">
+                
+            </nav>
+        </div>
+    </header>
+   </div>
     <!--Обовязково додавати потрібно для JS -->
     <script> var exports = {}; </script>
     <script src="@@webRoot/js/index.js"></script>
