--- a/project/ex/src/index.html
+++ b/project/ex/src/index.html
@@ -46,7 +46,7 @@
        <main class="home-page">
           <section>
             <div class="container">   <h1>Home page</h1></div>
-         
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae porro earum eveniet optio blanditiis mollitia harum placeat repellat corrupti ratione?</p>
           </section>
           <section></section>
           <section></section>
