--- a/project/ex/src/pages/about.html
+++ b/project/ex/src/pages/about.html
@@ -43,14 +43,41 @@
             </div>
         </header>
 
-       <main class="about-page">
+       <main class="about">
           <section>
-            <div class="container">
-                <h1>About page</h1>
+            <div class="container about__container">
+                <div class="about__block-l">
+                    <h2 class="about__heading">
+                        About
+                    </h2>
+                        <p class="about__txt">
+                            I’m Manifest
+                            Full-time UI/UX designer
+                            Head of Design at VeronaLabs.com
+                        </p>
+                        <img class="about_img" src="../img/about/img01.png" alt="photo">
+                   
+                </div>
+                <div class="about__block-r">
+                    <p class="about__txt-r">
+                        I was born in January 1990. After getting my Degree in computer science in 2002, I persuaded my higher study in Human Computer Interaction Design. I got my first job as Graphic Designer in the year 2008. After getting experience in graphic for a year, I moved to UI-UX Designing.
+                    </p>
+                    <p class="about__txt-r">
+                        In 2010, I decided to work as a Freelance Web, UI-UX & Mobile Interface Designer. I find myself still in the learning phase and have strong desire to achieve as many skills as I can.
+                    </p>
+                    <div class="about__btn-box">
+                        <button class="about__btn">
+                            Resume 
+                        </button>
+                        <img class="about__btn-arrow" src="../img/about/arrow.png" alt="">
+                    </div>
+                </div>
             </div>
           </section>
        </main>
-
+            <section class="about">
+                
+            </section>
        <footer>
         <div class="container"><h2>Footer</h2></div>
     </footer>
