--- a/project/ex/src/pages/about.html
+++ b/project/ex/src/pages/about.html
@@ -52,10 +52,14 @@
                     </h2>
                         <p class="about__txt">
                             I’m Manifest
+                        <!-- </p>
+                            <p class="about__txt"> -->
                             Full-time UI/UX designer
+                        <!-- </p>
+                            <p class="about__txt"> -->
                             Head of Design at VeronaLabs.com
                         </p>
-                        <img class="about_img" src="../img/about/img01.png" alt="photo">
+                        <img class="about__img" src="../img/about/img01.png" alt="photo">
                    
                 </div>
                 <div class="about__block-r">
@@ -66,10 +70,11 @@
                         In 2010, I decided to work as a Freelance Web, UI-UX & Mobile Interface Designer. I find myself still in the learning phase and have strong desire to achieve as many skills as I can.
                     </p>
                     <div class="about__btn-box">
-                        <button class="about__btn">
-                            Resume 
+                        <button class="about__btn">                         
+                            <a class="about__btn" href="#">Resume</a> 
+                            <a class="about__arrow fa fa-arrow-right fa-2x" href="#"></a>
                         </button>
-                        <img class="about__btn-arrow" src="../img/about/arrow.png" alt="">
+                        <!-- <img class="about__btn-arrow" src="../img/about/arrow.png" alt=""> -->
                     </div>
                 </div>
             </div>
