--- a/project/ex/src/pages/about.html
+++ b/project/ex/src/pages/about.html
@@ -47,16 +47,12 @@
           <section>
             <div class="container about__container">
                 <div class="about__block-l">
-                    <h2 class="about__heading">
+                    <h1 class="about__heading">
                         About
-                    </h2>
+                    </h1>
                         <p class="about__txt">
                             I’m Manifest
-                        <!-- </p>
-                            <p class="about__txt"> -->
                             Full-time UI/UX designer
-                        <!-- </p>
-                            <p class="about__txt"> -->
                             Head of Design at VeronaLabs.com
                         </p>
                         <img class="about__img" src="../img/about/img01.png" alt="photo">
@@ -71,18 +67,15 @@
                     </p>
                     <div class="about__btn-box">
                         <button class="about__btn">                         
-                            <a class="about__btn" href="#">Resume</a> 
+                            <!-- <a class="about__btn-txt" href="#">Resume</a>  --> 
+                            Resume
                             <a class="about__arrow fa fa-arrow-right fa-2x" href="#"></a>
                         </button>
-                        <!-- <img class="about__btn-arrow" src="../img/about/arrow.png" alt=""> -->
                     </div>
                 </div>
             </div>
           </section>
        </main>
-            <section class="about">
-                
-            </section>
        <footer>
         <div class="container"><h2>Footer</h2></div>
     </footer>
