--- a/project/ex/src/pages/contact.html
+++ b/project/ex/src/pages/contact.html
@@ -43,18 +43,72 @@
             </div>
         </header>
 
-       <main class="contact-page">
+       <main class="contact">
           <section>
-            <div class="container">
-                <h1>Contact page</h1>
+            <div class="container contact__container">
+            <div class="contact__block-l">
+                <div class="contact__title">
+                <h1>Contact us</h1>
+                </div>
+                <div class="contact__info">
+                    <h3 class="contact__info-h3">
+                        Contact information
+                    </h3>
+                    <h4 class="contant__info-h4">
+                        486 Rahi street, Berlin .98
+                        Germany
+                    </h4>
+                        <h4>+48 601 366 816</h4>
+                        <h4>company@support.com</h4>
+                </div>
+                <div class="contact__social">
+                    <h3>
+                        Follow Us
+                    </h3>
+                    <div class="contacto__icons">
+                    <a href="">a</a>
+                    <a href="">a</a>
+                    <a href="">a</a>
+                    <a href="">a</a>
+                </div>
+                </div>
             </div>
-            
+            <div class="contact__block-r">
+                <div class="contact__text">
+                    <h4>
+                        If you need our help with your user account, have 
+                    </h4>
+                    <h4>
+                        questions about how to use the platform or are 
+                    </h4>
+                    <h4>
+                        experiencing technical difficulties, please do not hesitate
+                    </h4>
+                    <h4>    
+                         to contact us.
+                    </h4>
+                </div>
+                <div class="contact__form">
+                    <h5 class="contact__txt-h5">Name*</h5>
+                    <input class="contact__input" type="text" placeholder="Walter Moss">
+                    <h5 class="contact__txt-h5">Email*</h5>
+                    <input class="contact__input" type="text" placeholder="Info@manifest.com">
+                    <h6 class="contact__txt-h6">Reason for contact</h6>
+                    <input class="contact__input" type="text">
+                    <h5 class="contact__txt-h5">Message*</h5>
+                    <input class="contact__input" type="text" placeholder="Hi there ...">
+                <div class="contact__btn-box">
+                    <button class="contact__btn btn">
+                        <h7>
+                            Send 
+                        </h7> 
+                        <a class="contact__arrow fa fa-arrow-right fa-2x" href="#"></a>
+                    </button>
+                </div>
+                </div>
+            </div>
+            </div>            
           </section>
-          <section></section>
-          <section></section>
-          <section></section>
-          <section></section>
-          <section></section>
        </main>
 
        <footer>
