--- a/project/ex/src/pages/about.html
+++ b/project/ex/src/pages/about.html
@@ -77,7 +77,9 @@
           </section>
        </main>
        <footer>
-        <div class="container"><h2>Footer</h2></div>
+        <div class="container footer__contaienr">
+            <h2>Footer</h2>
+        </div>
     </footer>
 
     </div>
