--- a/project/ex/src/pages/contact.html
+++ b/project/ex/src/pages/contact.html
@@ -112,12 +112,14 @@
        </main>
 
        <footer>
-        <div class="container"><h2>Footer</h2></div>
+        <div class="container footer__container">
+            <h2>
+                Need a project?
+            </h2>
+        </div>
     </footer>
-
     </div>
     
-
     <!--Обовязково додавати потрібно для JS -->
     <script> var exports = {}; </script>
     <script src="@@webRoot/js/index.js"></script>
