--- a/project/ex/src/pages/contact.html
+++ b/project/ex/src/pages/contact.html
@@ -113,9 +113,30 @@
 
        <footer>
         <div class="container footer__container">
+            <div>
             <h2>
                 Need a project?
             </h2>
+            <h6>
+                (239) 555-0108
+            </h6>
+            <h6>
+                tanya.hill@example.com
+            </h6>
+        </div>
+        <div>
+            <ul>
+                <li> <a href="">Facebook</a></li>
+                <li> <a href="">Instagram</a></li>
+                <li> <a href="">Dribbble</a></li>
+                <li> <a href="">Linkedin</a></li>
+            </ul>
+        </div>
+        <div>
+            <p class="footer__copy">
+                © Copyright Manifest Theme. Allrights reserved
+            </p>
+        </div>
         </div>
     </footer>
     </div>
