--- a/project/ex/src/index.html
+++ b/project/ex/src/index.html
@@ -55,9 +55,57 @@
           <section></section>
        </main>
 
-       <footer>
-        <div class="container"><h2>Footer</h2></div>
-    </footer>
+
+       <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <h2>
+
+                </h2>
+                <a class="footer_contact" href="tel:"></a>
+                <a class="footer_contact" href="emailto:"></a>
+            </div>
+            <ul class="footer__social-row">
+                <li class="footer__social-item" > <a class="footer__link" href=""></a> </li>
+                <li class="footer__social-item" > <a class="footer__link" href=""></a> </li>
+                <li class="footer__social-item" > <a class="footer__link" href=""></a> </li>
+                <li class="footer__social-item" > <a class="footer__link" href=""></a> </li>
+            </ul>
+
+            <p class="h9 footer__descrption">
+                
+            </p>
+        </div>
+       </footer>
+
+       <!-- <footer class="footer">
+        <div class="container footer__container">
+            <div>
+            <h2 class="footer__title">
+                Need a project?
+            </h2>
+            <h6 class="footer__info">
+                (239) 555-0108
+            </h6>
+            <h6 class="footer__info">
+                tanya.hill@example.com
+            </h6>
+        </div>
+        <div footer__links>
+            <ul>
+                <li class="footer__social"> <a class="footer__social-links" href="">Facebook</a></li>
+                <li class="footer__social"> <a class="footer__social-links" href="">Instagram</a></li>
+                <li class="footer__social"> <a class="footer__social-links" href="">Dribbble</a></li>
+                <li class="footer__social"> <a class="footer__social-links" href="">Linkedin</a></li>
+            </ul>
+        </div>
+        <div class="footer__copy-box">
+            <p class="footer__copy">
+                © Copyright Manifest Theme. Allrights reserved
+            </p>
+        </div>
+        </div>
+    </footer> -->
 
     </div>
     
