--- a/project/ex/src/pages/contact.html
+++ b/project/ex/src/pages/contact.html
@@ -54,22 +54,25 @@
                     <h3 class="contact__info-h3">
                         Contact information
                     </h3>
-                    <h4 class="contant__info-h4">
+                    <h4 class="contact__info-h4">
                         486 Rahi street, Berlin .98
                         Germany
                     </h4>
-                        <h4>+48 601 366 816</h4>
-                        <h4>company@support.com</h4>
+                        <h4> <i class="fa fa-phone" aria-hidden="true"></i><a class="contact__info-a" href="">+48 601 366 816</a> 
+                        </h4>
+                        <h4>
+                        <i class="fa fa-envelope" aria-hidden="true"></i><a class="contact__info-a" href="">company@support.com</a>
+                    </h4>
                 </div>
                 <div class="contact__social">
                     <h3>
                         Follow Us
                     </h3>
-                    <div class="contacto__icons">
-                    <a href="">a</a>
-                    <a href="">a</a>
-                    <a href="">a</a>
-                    <a href="">a</a>
+                    <div class="contact__icons">
+                    <a href=""><i class="fa fa-facebook contact__social-icons"></i></a>
+                    <a href=""><i class="fa fa-twitter contact__social-icons"></i></a>
+                    <a href=""><i class="fa fa-linkedin contact__social-icons"></i></a>
+                    <a href=""><i class="fa fa-dribbble contact__social-icons"></i></a>
                 </div>
                 </div>
             </div>
@@ -111,28 +114,28 @@
           </section>
        </main>
 
-       <footer>
+       <footer class="footer">
         <div class="container footer__container">
             <div>
-            <h2>
+            <h2 class="footer__title">
                 Need a project?
             </h2>
-            <h6>
-                (239) 555-0108
+            <h6 class="footer__info">
+               (239) 555-0108
             </h6>
-            <h6>
+            <h6 class="footer__info">
                 tanya.hill@example.com
             </h6>
         </div>
-        <div>
+        <div footer__links>
             <ul>
-                <li> <a href="">Facebook</a></li>
-                <li> <a href="">Instagram</a></li>
-                <li> <a href="">Dribbble</a></li>
-                <li> <a href="">Linkedin</a></li>
+                <li class="footer__social"> <a class="footer__social-links" href="">Facebook</a></li>
+                <li class="footer__social"> <a class="footer__social-links" href="">Instagram</a></li>
+                <li class="footer__social"> <a class="footer__social-links" href="">Dribbble</a></li>
+                <li class="footer__social"> <a class="footer__social-links" href="">Linkedin</a></li>
             </ul>
         </div>
-        <div>
+        <div class="footer__copy-box">
             <p class="footer__copy">
                 © Copyright Manifest Theme. Allrights reserved
             </p>
