--- a/project/ex/src/pages/about.html
+++ b/project/ex/src/pages/about.html
@@ -77,10 +77,34 @@
           </section>
        </main>
        <footer>
-        <div class="container footer__contaienr">
-            <h2>Footer</h2>
-        </div>
-    </footer>
+        <footer class="footer">
+            <div class="container footer__container">
+                <div>
+                <h2 class="footer__title">
+                    Need a project?
+                </h2>
+                <h6 class="footer__info">
+                    (239) 555-0108
+                </h6>
+                <h6 class="footer__info">
+                    tanya.hill@example.com
+                </h6>
+            </div>
+            <div footer__links>
+                <ul>
+                    <li class="footer__social"> <a class="footer__social-links" href="">Facebook</a></li>
+                    <li class="footer__social"> <a class="footer__social-links" href="">Instagram</a></li>
+                    <li class="footer__social"> <a class="footer__social-links" href="">Dribbble</a></li>
+                    <li class="footer__social"> <a class="footer__social-links" href="">Linkedin</a></li>
+                </ul>
+            </div>
+            <div class="footer__copy-box">
+                <p class="footer__copy">
+                    © Copyright Manifest Theme. Allrights reserved
+                </p>
+            </div>
+            </div>
+        </footer>
 
     </div>
     
