--- a/project/ex/src/pages/works.html
+++ b/project/ex/src/pages/works.html
@@ -45,15 +45,79 @@
 
        <main class="works-page">
           <section>
-            <div class="container">
-                <h1>Works page</h1>
+            <div class="works__container">
+                <div class="works__content">
+                    <h1 class="works__title h1">
+                        Works
+                    </h1>
+                <h4>
+                    Hello! I’m Manifest – a Freelance UI/UX Designer from Berlin, Germany.
+                </h4>
+                </div>
+                <div class="works__content">
+                   <div class="works__inner">
+                    <h3 class="works__iner-txt h3">
+                        Car Sharing App
+                    </h3>
+                    <h6>
+                        Product Design
+                    </h6>
+                    <h6>
+                        2020
+                    </h6>
+
+                    <button>
+                        View More
+                    </button>
+                </div>
+                    <div class="works__img">
+                        <img src="../assets/img/works/Img01.jpeg" alt="image">
+                    </div>
+                </div>
+                <div class="works__content">
+                   <div class="works__inner">
+                    <h3 class="works__iner-txt h3">
+                        AI Fashion Platform
+                    </h3>
+                    <h6>
+                        User Centered Website Redesign
+                    </h6>
+                    <h6>
+                        2019
+                    </h6>
+
+                    <button>
+                        View More
+                    </button>
+                </div>
+                    <div class="works__img">
+                        <img src="../assets/img/works/Img02.jpeg" alt="image">
+                    </div>
+                </div>
+                <div class="works__content">
+                   <div class="works__inner">
+                    <h3>
+                        Redesigning DropBox
+                    </h3 class="works__iner-txt h3">
+                    <h6>
+                        Product Design
+                    </h6>
+                    <h6>
+                        2018
+                    </h6>
+
+                    <button>
+                        View More
+                    </button>
+                </div>
+                    <div class="works__img">
+                        <img src="../assets/img/works/Img03.jpeg" alt="image">
+                    </div>
+                </div>
+
+                </div>
             </div>
           </section>
-          <section></section>
-          <section></section>
-          <section></section>
-          <section></section>
-          <section></section>
        </main>
 
        <footer class="footer">
