--- a/project/ex/src/pages/contact.html
+++ b/project/ex/src/pages/contact.html
@@ -96,9 +96,9 @@
                     <h5 class="contact__txt-h5">Name*</h5>
                     <input class="contact__input" type="text" placeholder="Walter Moss">
                     <h5 class="contact__txt-h5">Email*</h5>
-                    <input class="contact__input" type="text" placeholder="Info@manifest.com">
+                    <input class="contact__input" type="email" placeholder="Info@manifest.com">
                     <h6 class="contact__txt-h6">Reason for contact</h6>
-                    <input class="contact__input" type="text">
+                    <input class="contact__input" type="select">
                     <h5 class="contact__txt-h5">Message*</h5>
                     <input class="contact__input" type="text" placeholder="Hi there ...">
                 </form>
